# wandb-xrpl-proof

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  README_ja.md  pyproject.toml  weave_proof.json
demo/: README.md  demo_proof.json  hackathon_live.py  hackathon_tamper.py  run_demo.py  verify_demo.py  weave_demo.py  weave_proof.json
documents/: WandB_XRPL_Anchor_Spec_v0_2.md
examples/: basic_usage.py
tests/: conftest.py
tests/integration/: test_anchor_integration.py  test_xrpl_integration.py
tests/unit/: test_anchor.py  test_canonicalize.py  test_hash.py  test_incremental.py  test_merkle.py
wandb_xrpl_proof/: __init__.py  anchor.py  canonicalize.py  hash.py  incremental.py  ipfs.py  merkle.py  verify.py  xrpl_client.py
